Add some JMH benchmarks